# Case-Study-Intelligent-Systems-in-Production-Group-B

./: README.md
core/: data_preprocessing.py  integrated_optimizer.py  main.py  pyproject.toml  requirements.txt  route_optimizer.py  run_optimization.py
core/api/: main.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: app-sidebar.tsx
