[project]
name = "core"
version = "0.1.0"
description = "AI-Driven Route Optimization and Delay Prediction System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "torch>=2.5.1",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "ortools>=9.8.0",
]
